0.2.9

* typo fixed detailes -> details
* restore ./inc in Git scm to allow `cpanm` install via git url

0.2.8 2016-12-27

* fixed bug empty message in within expressions

0.2.7 2016-12-25

* a few minor doc changes for occasional bugs appeared right after 0.2.6

0.2.6 2016-12-25

* documentation release ( made a lot of improvements )
* added examples/ directory with explanatory code
* fix for comments in the end of regexps and plain checks


0.2.5 2016-12-24

* fixed issues for multiline expressions in validate parser ( third iteration )

0.2.4 2016-12-24

* fixed issues for multiline expressions in validate parser ( second iteration )

0.2.3 2016-12-23

* fixed issues for multiline expressions in validate parser

0.2.2 2016-12-22

* fix for regexps / plain check with trailing spaces

0.2.1 2016-12-22

* fix for inc/Module/Install.pm missed

0.2.0  2016-12-22

* breaking changes - last line in miltiline back slashed expressions should be '\'
* backported fixes and merged refactored code from Outhentix::DSL

0.1.4 2016-05-05

* asserts - Ruby true|false to Perl 1|0 conversion
* code and generator handlers changed - external runner modified to allow run Ruby stories with/wo bundler

0.1.3 2016-05-01

* require JSON in dependencies

0.1.2 2016-04-29

* minor documentation changes


0.1.1 2016-04-29

* many (hopefully back compatible :) changes concerning integration with Outthentic of version 0.1.*
* adding asserts expressions
* documentation improved, cleared and expanded

0.1.0 2016-04-21

* here documents as alternative for back slash delimiters for multiline strings
* limited support for various languages! Wow!


0.0.12 2016-04-03

Generators, validators, code blocks - print evaled code in human friendly manner for easy troubleshooting

0.0.11 2016-03-25

Outthentic::DSL::Context::Range::update_stream bugfix ( it was hard to find though ;-)

0.0.10 2016-03-18

some debug messages are shown at higher level of debug_mod variable

0.0.9 2016-02-15
